<resources>
    <string name="app_name">Contacts</string>
    <string name="contact_id">Contact ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_string">Add</string>
    <string name="find_string">Find</string>
    <string name="asc_string">ASC</string>
    <string name="desc_string">DESC</string>
    <string name="defaultContactID">0</string>
</resources>